<resources>
    <string name="app_name">Conference Viewer</string>
    <string name="app_full_name">Xebia Conference Viewer</string>
    <string name="app_version">0.7.3</string>
    <string name="app_help_url">http://xke.xebia.com/help</string>
    <string name="splash_conference">Xebia Knowledge Exchange</string>
    <string name="splash_company">Xebia</string>
    <string name="splash_version">Version %s</string>
    <string name="splash_copyright">Copyright &#169; 2012 Xebia B.V.</string>
    <string name="splash_copyright2">Copyright &#169; 2012 Xebia B.V. All rights reserved.</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_search">Search</string>
    <string name="menu_overview">Conferences</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_track">My Track</string>
    <string name="menu_list">List view</string>
    <string name="menu_running">Now showing</string>
    <string name="password_set">Password stored</string>
    <string name="password_unset">No password specified</string>
    <string name="session_title">Session title</string>
    <string name="modify_session">Modify session</string>
    <string name="author_select">Select authors&#8230;</string>
    <string name="label_select">Select labels&#8230;</string>
    <string name="empty_value">&lt;specify value></string>
    <string name="default_input_text">&lt;start typing></string>
    <string name="my_track_title">My track list</string>
    <string name="context_menu_author_view">View author</string>
    <string name="context_menu_author_remove">Remove author</string>
    <string name="context_menu_label_remove">Remove label</string>
    <string name="context_menu_session_edit">Edit</string>
    <string name="context_menu_session_view">View</string>
    <string name="context_menu_session_delete">Delete</string>
    <string name="sizeLabel">Room size</string>
    <string name="newLocationLabel">Location name</string>
    <string name="breakLabel">Break</string>
    <string name="default_break_name">Dinner break</string>
    <string name="default_break_description">Common activity @ %s</string>
    <string-array name="cacheNames">
        <item>In memory</item>
        <item>Store in database</item>
        <item>Do not cache</item>
    </string-array>
    <string-array name="cacheClassNames">
        <item>Memory</item>
        <item>Database</item>
        <item>None</item>
    </string-array>
    <string-array name="durationInterval">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
        <item>90 minutes</item>
        <item>120 minutes</item>
    </string-array>
    <string-array name="languages">
        <item>Dutch</item>
        <item>English</item>
        <item>French</item>
        <item>Hindi</item>
    </string-array>
	<string name="notifyIntervalDefault">900</string>
    <string-array name="notifyInterval">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>one hour</item>
        <item>half a day</item>
        <item>one day</item>
        <item>switched off</item>
    </string-array>
    <string-array name="notifyIntervalValues">
        <item>300</item>
        <item>900</item>
        <item>3600</item>
        <item>43200</item>
        <item>86400</item>
        <item>off</item>
    </string-array>
    <string-array name="dateIndicators">
        <item>Last year</item>
        <item>Next year</item>
        <item></item>
        <item>Last week</item>
        <item>Yesterday</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Next week</item>
        <item>In {0} days</item>
        <item>{0} days ago</item>
        <item>Earlier this year</item>
        <item>Later this year</item>
        <item>In {0} weeks</item>
    </string-array>
    <string-array name="rateValues">
		<item>No rating</item>
		<item>Very poor</item>
		<item>Poor</item>
		<item>Less than moderate</item>
		<item>Moderate</item>
		<item>Fair</item>
		<item>Adequate</item>
		<item>Good</item>
		<item>Very good</item>
		<item>Excellent</item>
		<item>Outstanding</item>
    </string-array>
    <string-array name="conferenceFields">
		<item>Start time</item>
		<item>End time</item>
		<item>Title</item>
		<item>Location</item>
    </string-array>
    <string-array name="sessionFields">
		<item>Start time</item>
		<item>Title</item>
		<item>Description</item>
		<item>Author</item>
		<item>Number of people</item>
		<item>Location</item>
    </string-array>
    <string-array name="sessionTypes">
		<item>STANDARD:Presentation:1</item>
		<item>WORKSHOP:Workshop</item>
		<item>BRAINSTORM:Brainstorm</item>
		<item>BOOK:Book review</item>
		<item>SUMMARY:Report</item>
		<item>STRATEGIC:Strategy</item>
		<item>INCUBATOR:Incubator</item>
		<item>MANDATORY:Corporate:2</item>
		<item>BREAK:Break:6</item>
    </string-array>
    <string-array name="statusFields">
		<item>fully booked</item>
		<item>{0} sessions scheduled</item>
		<item>{0} slots available</item>
    </string-array>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="failed">Failed</string>
    <string name="warning">Warning</string>
    <string name="ignore">Ignore</string>
    <string name="edit">Edit</string>
    <string name="session_add">Add session</string>
    <string name="session_edit">Edit session</string>
    <string name="duration_minutes">%d min</string>
    <string name="loading">Loading. Please wait&#8230;</string>
    <string name="auth_failed_title">Not authorized</string>
    <string name="auth_failed">Authentication failed for task \'%s\'. Please set credentials.</string>
    <string name="action_failed">Action failed</string>
    <string name="communication_failure">Communication failure on \'%1$s\' due to %2$s.</string>
    <string name="server_unreachable">Server unreachable</string>
    <string name="server_missing_url">No result for \'%s\'</string>
    <string name="server_timeout">Time out on \'%s\'</string>
    <string name="specify_attributes">Please specify the following attributes: %s</string>
    <string name="no_session_added">No session added</string>
    <string name="session_not_added">Session could not be added (%s).</string>
    <string name="delete_session">Delete session</string>
    <string name="confirm_delete_session">Are you sure to delete session \'%1$s\' on %2$s?</string>
    <string name="rescheduling_failed">Rescheduling failed</string>
    <string name="reschedule_failed_message">The session cannot be scheduled. Shorten session, use another location or choose another conference.</string>
    <string name="pick_conference">Pick a conference</string>
    <string name="pick_start">Pick a start time</string>
    <string name="conference_fully_booked">This conference has no room for this session</string>
    <string name="pick_duration">Pick a duration</string>
    <string name="select_languages">Select languages</string>
    <string name="select_location">Select location</string>
    <string name="pick_type">Pick a type</string>
    <string name="preparation">Preparation</string>
    <string name="description">Description</string>
    <string name="number_of_people">Number of people</string>
    <string name="intended_audience">Intended audience</string>
    <string name="add_conference">Add conference</string>
    <string name="edit_conference">Edit conference</string>
    <string name="conference_with_sessions">This conference has %d session(s).</string>
    <string name="confirm_delete_conference">Are you sure to delete conference \'%1$s\' on %2$s?</string>
    <string name="delete_conference">Delete conference</string>
    <string name="move_delete">Move &amp; delete</string>
    <string name="failure_move_session">Failed! Session cannot be moved.</string>
    <string name="add_location">Add new&#8230;</string>
    <string name="conference_detail">Conference detail</string>
    <string name="no_location_date">No locations and/or date specified yet</string>
    <string name="conference_title">Conference title</string>
    <string name="notification_on">Update check enabled.</string>
    <string name="notification_off">Update check disabled.</string>
    <string name="search_no_search">Please specify a valid search text.</string>
    <string name="droidfu_progress_dialog_title">Loading&#8230;</string>
    <string name="droidfu_progress_dialog_message">Contacting server to load data.</string>
    <string name="action_search_sessions">Search sessions</string>
    <string name="action_search_authors">Search authors</string>
    <string name="action_delete_session">Delete session</string>
    <string name="action_delete_conference">Delete conference</string>
    <string name="action_register_conference">Register conference</string>
    <string name="action_register_location">Register location</string>
    <string name="action_register_rate">Register rate</string>
    <string name="action_register_remark">Register comment</string>
    <string name="action_register_session">Register session</string>
    <string name="action_retrieve_authors">Load authors</string>
    <string name="action_retrieve_conference">Load conference</string>
    <string name="action_retrieve_conferences">Load conferences</string>
    <string name="action_retrieve_remarks">Load comments</string>
    <string name="action_retrieve_labels">Load labels</string>
    <string name="action_retrieve_locations">Load locations</string>
    <string name="action_retrieve_rate">Load rate</string>
    <string name="action_retrieve_session">Load session</string>
    <string name="img_conferenceButton">Show conferences</string>
    <string name="img_icon">Icon</string>
    <string name="img_nav_left">Previous</string>
    <string name="img_nav_right">Next</string>
    <string name="img_nav_up">Up</string>
    <string name="img_nav_down">Down</string>
    <string name="img_mark">Mark this session</string>
    <string name="img_rate">Rate this session</string>
    <string name="img_edit">Edit this session</string>
    <string name="img_author">Author</string>
    <string name="img_completeness">Shows how complete the details are</string>
    <string name="header">Header</string>
    <string name="labels">Labels</string>
    <string name="sessions">Sessions</string>
    <string name="audience">Audience</string>
    <string name="authors">Author(s)</string>
    <string name="curriculum">Curriculum</string>
    <string name="language">Language</string>
    <string name="left">Left</string>
    <string name="limit">Limit</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="nextsession">Next Session</string>
    <string name="prevsession">Previous Session</string>
    <string name="right">Right</string>
    <string name="schedule">Schedule</string>
    <string name="your_rating">Your rating</string>
    <string name="your_remark">Your remark</string>
    <string name="no_later_session">No later session</string>
    <string name="no_earlier_session">No earlier session</string>
    <string name="no_author_found">Author not found</string>
    <string name="label_removed">Label removed</string>
    <string name="submit">Submit</string>
    <string name="duration">Duration</string>
    <string name="location">Location</string>
    <string name="start">Start</string>
    <string name="submit_review">Enter your comment on this session and click \'Submit\'.</string>
    <string name="no_open_slots">no open slots</string>
    <string name="separator"> / </string>
    <string name="title">Title</string>
    <string name="today">Today</string>
</resources>