<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/itemContentLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/itemElements1Layout"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:text="@string/title"
				android:textSize="@dimen/ts_itemtitle"
				android:id="@+id/cnf_title"
				android:padding="3dip"
				android:layout_height="wrap_content"
				android:layout_gravity="left|top"
				android:layout_width="fill_parent"
				android:layout_weight="1"></TextView>
			<TextView
				android:text="@string/today"
				android:textSize="@dimen/ts_itemwhen"
				android:id="@+id/cnf_when"
				android:padding="3dip"
				android:gravity="right"
				android:layout_height="wrap_content"
				android:layout_gravity="right|top"
				android:layout_width="fill_parent"
				android:layout_weight="1"></TextView>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/itemElements2Layout"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:text="@string/empty_value"
				android:textSize="@dimen/ts_itemdetail"
				android:id="@+id/cnf_date"
				android:padding="3dip"
				android:layout_height="wrap_content"
				android:layout_gravity="left|top"
				android:layout_width="fill_parent"
				android:layout_weight="1"></TextView>
			<TextView
				android:text="@string/no_open_slots"
				android:textSize="@dimen/ts_itemdetail"
				android:id="@+id/cnf_status"
				android:padding="3dip"
				android:gravity="right"
				android:layout_height="wrap_content"
				android:layout_gravity="right|bottom"
				android:layout_width="fill_parent"
				android:layout_weight="1"></TextView>
		</LinearLayout>
		<View
			android:id="@+id/tabDivider"
			android:layout_height="2dp"
			android:layout_width="fill_parent"
			android:background="@color/linebreak" />
	</LinearLayout>
</TableLayout>