<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/seDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:text="@string/breakLabel"
        android:textSize="18sp" >
    </TextView>

    <EditText
        android:id="@+id/seValue"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:cursorVisible="true"
        android:gravity="top|left"
        android:inputType="text|textAutoCorrect|textAutoComplete|textShortMessage"
        android:maxLength="25" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6sp" >

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp" >

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/start"
                android:textSize="@dimen/ts_attribute" >
            </TextView>

            <Spinner
                android:id="@+id/bStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp" >

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/duration"
                android:textSize="@dimen/ts_attribute" >
            </TextView>

            <Spinner
                android:id="@+id/bDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp" >

            <TextView
                android:id="@+id/TextView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/location"
                android:textSize="@dimen/ts_attribute" >
            </TextView>

            <Spinner
                android:id="@+id/bLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/seCommit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" >
        </Button>

        <Button
            android:id="@+id/seCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>