<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dvReviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:gravity="center_horizontal"
        android:text="@string/submit_review"
        android:textColor="@color/textcolor_title" >
    </TextView>

    <TextView
        android:id="@+id/dvSessionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:text="@string/app_name"
        android:textSize="18sp" >
    </TextView>

    <EditText
        android:id="@+id/dvEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:cursorVisible="true"
        android:gravity="top|left"
        android:inputType="textAutoCorrect|textAutoComplete|textMultiLine|textLongMessage"
        android:maxLines="5"
        android:minLines="3" >
    </EditText>

    <Button
        android:id="@+id/dvSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20sp"
        android:text="@string/submit" >
    </Button>

</LinearLayout>