<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:stretchColumns="1" >

    <View
        android:id="@+id/tabDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/linebreak" >
    </View>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ses_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/title"
                android:textSize="@dimen/ts_sessiontitle" >
            </TextView>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/ses_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/empty_value"
                    android:textSize="@dimen/ts_sessiondetail" >
                </TextView>

                <TextView
                    android:id="@+id/ses_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separator" >
                </TextView>

                <TextView
                    android:id="@+id/ses_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labels" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="3dp" >

            <TextView
                android:id="@+id/ses_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:background="@drawable/touchtext" >
            </TextView>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>