<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/conferenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/img_conferenceButton"
            android:src="@drawable/x_conference" >
        </ImageView>

        <TextView
            android:id="@+id/av_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@+id/conferenceButton"
            android:layout_alignTop="@+id/conferenceButton"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toRightOf="@+id/conferenceButton"
            android:gravity="center_vertical"
            android:paddingLeft="7sp"
            android:text="@string/curricum"
            android:textSize="@dimen/textsize_title" >
        </TextView>

    </RelativeLayout>

    <View
        android:id="@+id/firstDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/linebreak" >
    </View>

    <LinearLayout
        android:id="@+id/av_author_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="3sp"
        android:paddingLeft="3sp"
        android:paddingRight="10sp"
        android:paddingTop="3sp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labels"
            android:textColor="@color/textcolor_title"
            android:textStyle="bold" >
        </TextView>

        <View
            android:id="@+id/View02"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/textcolor_title" >
        </View>

        <TextView
            android:id="@+id/av_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/labelBlock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="3sp"
        android:paddingLeft="3sp"
        android:paddingRight="10sp"
        android:paddingTop="3sp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sessions"
            android:textColor="@color/textcolor_title"
            android:textStyle="bold" >
        </TextView>

        <View
            android:id="@+id/View01"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/textcolor_title" >
        </View>

        <ListView
            android:id="@+id/searchResults"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>
    <!-- <ListView -->
    <!-- android:id="@+id/sessionList" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:layout_width="fill_parent"></ListView> -->

</LinearLayout>